--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,10 @@
+// Этот файл почти пустой
 buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+
     dependencies {
         classpath "com.android.tools.build:gradle:8.1.2"
     }
