--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ android {
     }
 }
 
+repositories {
+    google()
+    mavenCentral()
+}
+
 dependencies {
     implementation "androidx.browser:browser:1.7.0"
     implementation "androidx.appcompat:appcompat:1.6.1"
