--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace "com.example.youtubeplayer"
-    compileSdk 33
+    compileSdk 34  // <-- Обновлено на 34
 
     defaultConfig {
         applicationId "com.example.youtubeplayer"
         minSdk 24
-        targetSdk 33
+        targetSdk 34   // <-- Обновлено на 34
         versionCode 1
         versionName "1.0"
     }
